// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders basic Modal correctly 1`] = `
<div
  class="zw-modal shape-rect"
  style="animation-duration:300ms;position:fixed;display:none"
>
  <div
    class="zw-modal--dialog zoom-leave"
    style="width:600px;min-width:270px;animation-duration:300ms"
    tabindex="-1"
  >
    <div
      class="zw-modal-header"
      title="标题"
    >
      <div
        class="zw-modal-title"
      />
    </div>
    <div
      class="zw-modal-body"
      style="height:auto"
    >
      我是一个模态框
    </div>
    <div
      class="zw-modal-footer"
    >
      页脚
    </div>
  </div>
</div>
`;

exports[`Modal renders closable Modal correctly 1`] = `
<div
  class="zw-modal shape-rect"
  style="animation-duration:300ms;position:fixed;display:none"
>
  <div
    class="zw-modal--dialog zoom-leave"
    style="width:600px;min-width:270px;animation-duration:300ms"
    tabindex="-1"
  >
    <div
      class="zw-modal-header"
      title="标题"
    >
      <div
        class="zw-modal-title"
      />
      <div
        class="zw-modal-close"
      >
        <i
          class="za-icon za-icon-wrong theme-default"
        />
      </div>
    </div>
    <div
      class="zw-modal-body"
      style="height:auto"
    >
      我是一个模态框
    </div>
    <div
      class="zw-modal-footer"
    >
      页脚
    </div>
  </div>
</div>
`;

exports[`Modal renders customized Modal correctly 1`] = `
<div
  class="zw-modal shape-radius"
  style="animation-duration:500ms;position:fixed;display:none"
>
  <div
    class="zw-modal--dialog fade-leave"
    style="width:400px;min-width:270px;animation-duration:500ms"
    tabindex="-1"
  >
    <div
      class="zw-modal-header"
      title="标题"
    >
      <div
        class="zw-modal-title"
      />
    </div>
    <div
      class="zw-modal-body"
      style="height:auto"
    >
      我是一个模态框
    </div>
    <div
      class="zw-modal-footer"
    >
      页脚
    </div>
  </div>
</div>
`;
